--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ sourceSets {
     main {
         java {
             srcDirs 'src/main/java'
+            srcDirs 'java-graphics/src/main/java'
         }
     }
 }
