--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
     mavenCentral()
 }
 
-mainClassName = 'com.busatod.graphics.raytracing.RayTracer'
+mainClassName = 'com.busatod.graphics.raytracing.RayTracing'
 
 jar {
     manifest {
