--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
+//apply plugin: 'idea'
 
 version = theVersion
-sourceCompatibility = theSourceCompatibility
-targetCompatibility = theTargetCompatibility
 
 //https://stackoverflow.com/questions/31077844/add-another-java-source-directory-to-gradle-script
 sourceSets {
     main {
         java {
             srcDirs 'src/main/java'
-            srcDirs 'java-graphics/src/main/java'
+            srcDirs 'base-java-graphics/src/main/java'
         }
     }
 }
